baml_language/crates/baml_tests/snapshots/header_in_llm_function/baml_tests__header_in_llm_function__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.Hi {
  name: string
}
function user.FetchDatax(user_id: string) -> user.Hi  [llm] {
  baml.llm.call_llm_function(VertexGCP, "FetchDatax", map { "user_id": user_id })
}
function user.FetchDatax$build_request(user_id: string) -> baml.http.Request  [expr] {
  baml.llm.build_request(VertexGCP, "FetchDatax", map { "user_id": user_id })
}
function user.FetchDatax$render_prompt(user_id: string) -> baml.llm.PromptAst  [expr] {
  baml.llm.render_prompt(VertexGCP, "FetchDatax", map { "user_id": user_id })
}
function user.VertexGCP$new() -> ?  [expr] {
  baml.llm.PrimitiveClient { name: "VertexGCP", provider: "vertex-ai", options: baml.llm.PrimitiveClientOptions { model: "gemini-2", base_url: null, default_role: null, allowed_roles: null, remap_roles: null, api_key: null, provider_options: null, headers: map {  }, query_params: map {  }, request_body: map { "flash": "" } } }
}
