baml_language/crates/baml_tests/snapshots/header_in_llm_function/baml_tests__header_in_llm_function__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.FetchDatax$render_prompt(user_id: string) -> baml.llm.PromptAst {
    // Locals:
    let _0: baml.llm.PromptAst // _0 // return
    let _1: string // user_id // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "user_id": copy _1 };
        _0 = call const fn baml.llm.render_prompt(const fn user.VertexGCP, const "FetchDatax", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.FetchDatax$build_request(user_id: string) -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: string // user_id // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "user_id": copy _1 };
        _0 = call const fn baml.llm.build_request(const fn user.VertexGCP, const "FetchDatax", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.FetchDatax(user_id: string) -> Hi {
    // Locals:
    let _0: Hi // _0 // return
    let _1: string // user_id // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "user_id": copy _1 };
        _0 = call const fn baml.llm.call_llm_function(const fn user.VertexGCP, const "FetchDatax", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.VertexGCP$new() -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: void
    let _2: map<void, void>
    let _3: map<void, void>
    let _4: map<"flash", "">

    bb0: {
        _2 = {  };
        _3 = {  };
        _4 = { const "flash": const "" };
        _1 = baml.llm.PrimitiveClientOptions { const "gemini-2", const null, const null, const null, const null, const null, const null, copy _2, copy _3, copy _4 };
        _0 = baml.llm.PrimitiveClient { const "VertexGCP", const "vertex-ai", copy _1 };
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
