baml_language/crates/baml_tests/snapshots/header_in_llm_function/baml_tests__header_in_llm_function__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 11837
---
=== MIR2 ===
fn user.FetchDatax(user_id: string) -> user.Hi {
    // Locals:
    let _0: user.Hi // _0 // return
    let _1: string // user_id // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "user_id": copy _1 };
        _0 = call const fn baml.llm.call_llm_function(const "FetchDatax", copy _2) -> [bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        return;
    }
}
