baml_language/crates/baml_tests/snapshots/header_in_llm_function/baml_tests__header_in_llm_function__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Hi {
  name: string
}
function user.VertexGCP$new() -> ? throws never {
  baml.llm.PrimitiveClient { name: "VertexGCP", provider: "vertex-ai", options: baml.llm.PrimitiveClientOptions { model: "gemini-2", max_tokens: null, temperature: null, top_p: null, base_url: null, default_role: null, allowed_roles: null, remap_roles: null, api_key: null, provider_options: null, headers: map {  }, query_params: map {  }, request_body: map { "flash": "" } } } : unknown
}
function user.FetchDatax(user_id: string) -> user.Hi throws never {
  baml.llm.call_llm_function<T>(VertexGCP, "FetchDatax", map { "user_id": user_id }) : user.Hi
}
function user.FetchDatax$render_prompt(user_id: string) -> baml.llm.PromptAst throws never {
  baml.llm.render_prompt(VertexGCP, "FetchDatax", map { "user_id": user_id }) : baml.llm.PromptAst
}
function user.FetchDatax$build_request(user_id: string) -> baml.http.Request throws never {
  baml.llm.build_request(VertexGCP, "FetchDatax", map { "user_id": user_id }) : baml.http.Request
}
function user.FetchDatax$parse(json: string) -> user.Hi throws never {
  baml.llm.parse<T>("FetchDatax", json) : user.Hi
}
class user.Hi$stream {
  name: null | string
}
