baml_language/crates/baml_tests/snapshots/header_in_llm_function/baml_tests__header_in_llm_function__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Warning: unreachable arm
   ╭─[ registry.baml:1:1 ]
   │
 1 │ // root.TestCollector — collector for tests and testsets.
   │ │ 
   │ ╰─ unreachable arm
   │ 
   │ Note: Error code: E0001
───╯

  [type] Warning: unreachable arm
     ╭─[ registry.baml:182:2 ]
     │
 182 │ ╭─▶         RunReport { outcome: "fail", duration_ms: 0 }
     ┆ ┆   
 184 │ ├─▶     }
     │ │           
     │ ╰─────────── unreachable arm
     │     
     │     Note: Error code: E0001
─────╯

  [hir] Error: vertex-ai requires either base_url or location (e.g. us-central1) in options
   ╭─[ test.baml:6:23 ]
   │
 6 │ ╭─▶     provider vertex-ai
   ┆ ┆   
 9 │ ├─▶     }
   │ │           
   │ ╰─────────── missing options
   │     
   │     Note: Error code: E0101
───╯

  [parse] Error: Expected config key, found '.'
   ╭─[ test.baml:8:23 ]
   │
 8 │         model gemini-2.0-flash
   │                       ┬  
   │                       ╰── Expected config key, found '.'
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: Expected config key, found integer
   ╭─[ test.baml:8:24 ]
   │
 8 │         model gemini-2.0-flash
   │                        ┬  
   │                        ╰── Expected config key, found integer
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: Expected config key, found '-'
   ╭─[ test.baml:8:25 ]
   │
 8 │         model gemini-2.0-flash
   │                         ┬  
   │                         ╰── Expected config key, found '-'
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: Expected identifier, found '}'
   ╭─[ test.baml:9:5 ]
   │
 9 │     }
   │     ┬  
   │     ╰── Expected identifier, found '}'
   │ 
   │ Note: Error code: E0010
───╯

  [parse] Error: Header comments (//#) are not allowed inside LLM functions
    ╭─[ test.baml:13:5 ]
    │
 13 │     //# collect source material
    │     ─────────────┬─────────────  
    │                  ╰─────────────── Header comments (//#) are not allowed inside LLM functions
    │ 
    │ Note: Error code: E0010
────╯
