baml_language/crates/baml_tests/snapshots/header_in_llm_function/baml_tests__header_in_llm_function__06_codegen2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function $init() -> null {
    call ?
    store_global ?103
    load_const ?
    return
}

function user.FetchDatax(user_id: string) -> user.Hi {
    load_global user.VertexGCP
    load_const "FetchDatax"
    load_var user_id
    load_const "user_id"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function user.FetchDatax$build_request(user_id: string) -> baml.http.Request {
    load_const "FetchDatax"
    load_var user_id
    load_const "user_id"
    alloc_map 1
    call baml.llm.build_request
    return
}

function user.FetchDatax$render_prompt(user_id: string) -> baml.llm.PromptAst {
    load_const "FetchDatax"
    load_var user_id
    load_const "user_id"
    alloc_map 1
    call baml.llm.render_prompt
    return
}

function user.VertexGCP$new() -> null {
    alloc_instance PrimitiveClient
    copy 0
    load_const "VertexGCP"
    store_field .name
    copy 0
    load_const "vertex-ai"
    store_field .provider
    copy 0
    alloc_instance PrimitiveClientOptions
    copy 0
    load_const null
    store_field .base_url
    copy 0
    load_const null
    store_field .default_role
    copy 0
    load_const null
    store_field .allowed_roles
    copy 0
    load_const null
    store_field .remap_roles
    copy 0
    load_const null
    store_field .api_key
    copy 0
    load_const null
    store_field .provider_options
    copy 0
    alloc_map 0
    store_field .headers
    copy 0
    alloc_map 0
    store_field .query_params
    copy 0
    load_const "gemini-2"
    load_const ""
    load_const "model"
    load_const "flash"
    alloc_map 2
    store_field .request_body
    store_field .options
    return
}
